RESOLVED FIXED185132
[Extra zoom mode] Respect the existing shrink-to-fit attribute instead of using min-device-width
https://bugs.webkit.org/show_bug.cgi?id=185132
Summary [Extra zoom mode] Respect the existing shrink-to-fit attribute instead of usi...
Wenson Hsieh
Reported 2018-04-30 08:44:29 PDT
Attachments
Patch (15.91 KB, patch)
2018-04-30 08:59 PDT, Wenson Hsieh
no flags
Try to fix GTK/WPE builds (15.88 KB, patch)
2018-04-30 09:49 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2018-04-30 08:59:49 PDT
Wenson Hsieh
Comment 2 2018-04-30 09:49:40 PDT
Created attachment 339117 [details] Try to fix GTK/WPE builds
Wenson Hsieh
Comment 3 2018-04-30 13:29:19 PDT
Comment on attachment 339117 [details] Try to fix GTK/WPE builds Thanks for the review!
WebKit Commit Bot
Comment 4 2018-04-30 13:56:45 PDT
Comment on attachment 339117 [details] Try to fix GTK/WPE builds Clearing flags on attachment: 339117 Committed r231168: <https://trac.webkit.org/changeset/231168>
WebKit Commit Bot
Comment 5 2018-04-30 13:56:46 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.