[Extra zoom mode] Respect the existing shrink-to-fit attribute instead of using min-device-width https://bugs.webkit.org/show_bug.cgi?id=185132 <rdar://problem/39834562>

Reviewed by Tim Horton.

Source/WebCore:

Removes the `min-device-width` attribute added in r231095. Instead, we key this behavior off of the
`shrink-to-fit` attribute introduced for multitasking on iPad, such that `shrink-to-fit=no` achieves the same
behavior as `min-device-width=0` in extra zoom mode. See comments below for more detail.

Adjusted an existing layout test: fast/viewport/extrazoom/viewport-change-min-device-width.html.

* dom/ViewportArguments.cpp:
(WebCore::setViewportFeature):
(WebCore::operator<<):
* dom/ViewportArguments.h:

Removes the `minDeviceWidth` viewport argument.

* page/RuntimeEnabledFeatures.h:
(WebCore::RuntimeEnabledFeatures::setMinDeviceWidthEnabled): Deleted.
(WebCore::RuntimeEnabledFeatures::minDeviceWidthEnabled const): Deleted.

Removes the runtime switch for `min-device-width`.

* page/ViewportConfiguration.cpp:
(WebCore::platformDeviceWidthOverride):

Hard-code the override device width in extra zoom mode.

(WebCore::ViewportConfiguration::shouldOverrideDeviceWidthAndShrinkToFit const):

In extra zoom mode, override the device width only if shrink-to-fit has not been expliticly disabled, and the
device width is less than the override device width.

(WebCore::ViewportConfiguration::shouldIgnoreHorizontalScalingConstraints const):
(WebCore::ViewportConfiguration::shouldIgnoreScalingConstraintsRegardlessOfContentSize const):
(WebCore::ViewportConfiguration::updateConfiguration):
(WebCore::ViewportConfiguration::updateMinimumLayoutSize):

Do not override the minimum layout size if `shrink-to-fit` has been explicitly explicitly disabled, or if the
device width is greater than the override device width.

(WebCore::computedMinDeviceWidth): Deleted.
(WebCore::ViewportConfiguration::shouldOverrideDeviceWidthWithMinDeviceWidth const): Deleted.
* page/ViewportConfiguration.h:

Source/WebKit:

Remove the experimental feature for `min-device-width`.

* Shared/WebPreferences.yaml:

LayoutTests:

Modifies an existing layout test to try out different values of `shrink-to-fit` instead of using the
`min-device-width` attribute. This test now begins with the default viewport configuration, then explicitly
disables `shrink-to-fit` by setting the attribute to a few different values (which should all achieve the same
effect), and lastly explicitly re-enables `shrink-to-fit` by setting the attribute value to several values that
should behave the same as `shrink-to-fit=yes`.

* fast/viewport/extrazoom/viewport-change-min-device-width.html:


Canonical link: https://commits.webkit.org/200628@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231168 268f45cc-cd09-0410-ab3c-d52691b4dbfc